--- a/mob-dev-2019211-ca/src/app/pages/tabs/tabs.page.html
+++ b/mob-dev-2019211-ca/src/app/pages/tabs/tabs.page.html
@@ -2,7 +2,7 @@
  
   <ion-tab-bar slot="bottom">
  
-    <ion-tab-button tab="films">
+    <ion-tab-button tab="characters">
       <ion-icon name="film"></ion-icon>
       <ion-label>Films</ion-label>
     </ion-tab-button>
