--- a/mob-dev-2019211-ca/src/app/pages/quote-details/quote-details.page.html
+++ b/mob-dev-2019211-ca/src/app/pages/quote-details/quote-details.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>deathCount</ion-title>
+    <ion-title>quoteDetails</ion-title>
   </ion-toolbar>
 </ion-header>
 
